# ChangeLog for games-fps/doom3-demo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/doom3-demo/ChangeLog,v 1.31 2014/07/03 22:07:43 axs Exp $

*doom3-demo-1.1.1286-r1 (03 Jul 2014)

  03 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +doom3-demo-1.1.1286-r1.ebuild:
  Bumped EAPI to 5, converted deps to gx86-multilib, dropped bundled
  glibc/libstdc++, dropped x11-drivers specific deps.  Seems odd that there is
  no requirement for alsa/emul-*-soundlibs like there is in games-fps/doom3

  05 Feb 2012; Mike Frysinger <vapier@gentoo.org> doom3-demo-1.1.1286.ebuild:
  Move to new unpacker eclass for unpack_makeself.

  14 Dec 2011; Mike Frysinger <vapier@gentoo.org> doom3-demo-1.1.1286.ebuild:
  The games.eclass has dropped GAMES_CHECK_LICENSE support (since portage now
  has ACCEPT_LICENSE), so drop it here too.

  26 Sep 2008; Zac Medico <zmedico@gentoo.org> doom3-demo-1.1.1286.ebuild:
  Set PROPERTIES=interactive since GAMES_CHECK_LICENSE=yes is set.

  25 Dec 2007; <solar@gentoo.org> doom3-demo-1.1.1286.ebuild:
  - binary packages that are linked with libc.so.6 need to use sys-libs/glibc
  in RDEPEND

  12 Mar 2007; Marius Mauch <genone@gentoo.org> doom3-demo-1.1.1286.ebuild:
  Replacing einfo with elog

  07 Nov 2006; Tristan Heaven <nyhm@gentoo.org> doom3-demo-1.1.1286.ebuild:
  Silence executable stack notice, as there's nothing we can do about it

  05 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  doom3-demo-1.1.1286.ebuild:
  Removed references to nvidia-glx, since it is no longer in the tree.

  07 Jul 2006; Kristopher Kersey <augustus@gentoo.org>
  doom3-demo-1.1.1286.ebuild:
  Added RDEPEND for new x11-drivers/nvidia-drivers or
  x11-drivers/nvidia-legacy-drivers.

  06 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  doom3-demo-1.1.1286.ebuild:
  Added >=app-emulation/emul-linux-x86-xlibs-7.0 to the list of valid 32-bit
  opengl providers for amd64 per bug #135643.
