@@ -2,12 +2,11 @@ DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
 DESCRIPTION=Doom III - 3rd installment of the classic id 3D first-person shooter
 EAPI=5
 HOMEPAGE=http://www.doom3.com/
-IUSE=opengl dedicated
 KEYWORDS=-* ~amd64 ~x86
 LICENSE=DOOM3
-RDEPEND=sys-libs/glibc sys-libs/libstdc++-v3:5 amd64? ( sys-libs/glibc[multilib] sys-libs/libstdc++-v3:5[multilib] ) || ( ( >=x11-libs/libX11-1.6.2[abi_x86_32(-)] >=x11-libs/libXext-1.3.2[abi_x86_32(-)] ) app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] ) opengl? ( || ( virtual/opengl[abi_x86_32(-)] app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)] ) ) dedicated? ( app-misc/screen ) games-misc/games-envd
+RDEPEND=sys-libs/glibc sys-libs/libstdc++-v3:5 amd64? ( sys-libs/glibc[multilib] sys-libs/libstdc++-v3:5[multilib] ) || ( ( >=virtual/opengl-7.0-r1[abi_x86_32(-)] >=x11-libs/libX11-1.6.2[abi_x86_32(-)] >=x11-libs/libXext-1.3.2[abi_x86_32(-)] ) ( app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)] ) ) games-misc/games-envd
 RESTRICT=strip mirror
 SLOT=0
 SRC_URI=mirror://3dgamers/doom3/doom3-linux-1.1.1286-demo.x86.run mirror://idsoftware/doom3/linux/doom3-linux-1.1.1286-demo.x86.run mirror://gentoo/doom3.png
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	76fc3c462065bb4ca959f939e6793f94	games	016d5de1968de77e56a90938ed6e5aba	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641	user	1a9ecf501027961855b0320e8915a79c
-_md5_=d1256e96a8d38c87139042abc1fdfae3
+_md5_=b2e7629825e298436fb39ea4ae2132de
